# Vacs-Client

./: .gitignore  CMakeLists.txt  CodeDocumentation.md  DLLIST_MIGRATION_ANALYSIS.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  Modernization.md  README.md  Vacs Client.dsp  Vacs Client.dsw  Vacs Client.opt  Vacs Client.plg  Vacs Client.sln  Vacs Client.vcproj  Vacs Client.vcxproj  Vacs Client.vcxproj.filters  Vacs.dsp  Vacs.dsw
.clinerules/: act_ruls.md
ConsoleDefinition/: CDef_DevCommunication.c  CDef_Preferences.c  CMakeLists.txt  ConsoleDefinition.dsp  ConsoleDefinition.plg  ConsoleDefinition.vcproj  ConsoleDefinition.vcxproj  ConsoleDefinition.vcxproj.filters  DCXParser.h  DLL_Main.c  dcx_parser.c  implement.c
ConsoleDefinition/Resource/: ConsoleDefinition.rc  SAMMGRAP.CUR  SAMMHAND.CUR  SAMMVSCR.CUR
DLList32/: CMakeLists.txt  DLLMain.C  DLList32.dsp  DLList32.vcproj  DLList32.vcxproj  DLList32.vcxproj.filters  DL_LIST.C
commport/: CMakeLists.txt  CommPort.c  CommPort.h  DLL_Main.c  commfifo.c  commfifo.h  commport.dsp  commport.plg  commport.vcproj  commport.vcxproj  commport.vcxproj.filters
commport/Debug/: commport.dll.recipe
inc/: CTRL.H  ConsoleDefinition.h  ConsoleDefinitionRC.h  DCXTCP_protocol.h  DLLIST.H  DLListWrapper.h  DLTYPES.H  MACRO.H  SAMM.h  SAMMext.h  SAMMstruc.h  Spooler.h  lang.h  samm_rc.h  sammres00.h
midi/: CMakeLists.txt  SAMMmidi.c  SAMMmidi.cpp  midi.def  midi.vcproj  midi.vcxproj  midi.vcxproj.filters
midi/rc/: MIDI_DLL.RC  RCa02132
src/: 256Colors.C  CMakeLists.txt  CompnGateVU.c  ConsoleCommunication.c  ControlDataFilters.c  Controls.c  CreateMain.c  Events interface.c  FullView.c  Groups.c  Init.c  Labels and Groups.c  MDI_Main.c  MIDI.c  Main.c  MasterWindow.c  MemoryMap.c  MemoryMap.cpp  MemoryMap_remaining.txt  Misc BinRes.c  Mix Files.c  Preferences.c  Remap and Mode.c  SAMM_Globals.c  Scan CtrlZones.c  Sequence.c  Status.c  Vacs Client.dsp  ZoneMaps.c  ZoomView.c  datafile.c  eqDisplay.c  trackingwindow.c
src/RC/: SAMM.APS  SAMM.rc  cur00001.cur  cur00002.cur  cur00003.cur  cur00004.cur  cursor1.cur  idcur.cur  idcur_up.cur
src/inc/: CDef_External.h  CDef_implement.h  CTRL.H  ConsoleDefinition.h  ConsoleDefinitionRC.h  DLLIST.H  SAMM.h  SAMMext.h  Spooler.h  lang.h  samm_rc.h
src/src/: 256Colors.C  Events interface.c  FullView.c  Labels and Groups.c  MDI_Main.c  Main.c  MemoryMap.c  Remap and Mode.c  datafile.c
usengl/: CMakeLists.txt  DLL_Main.c  usengl.001  usengl.002  usengl.aps  usengl.dsp  usengl.plg  usengl.rc  usengl.vcproj  usengl.vcxproj  usengl.vcxproj.filters
